CSS : Fix general information cards width overflow-flow
Previous commit added flex-direct column that introduces a bug on smaller screen that causes the width of the cards to overflow the width of the screen. This commit fixes that.

--- a/css/full.css
+++ b/css/full.css
@@ -304,7 +304,6 @@ ul li
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	/* background-image: url("../images/3606321.svg"); */
 	background-image: url("../images/3260101.svg");
 	background-position: center;
 	background-repeat: no-repeat;
@@ -391,11 +390,18 @@ ul li
 	justify-content: center;
 	align-items: center;
 	flex-wrap: wrap;
-	flex-direction: column;
 	background-image: url("../images/4706610.svg");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
+}
+
+@media screen and (min-width:1920px)
+{
+	#generalInformationContainerDiv
+	{
+		flex-direction: column;
+	}
 }
 
 #generalInformationDiv1
